2005-03-08  Paul Stevens <paul@nfg.nl>
	
	* db.c: added new calls db_user_create_shadow and db_user_find_create
	to better accomodate automatic shadow accounts for ldap users.
	* serverchild.c: code layout
	* dbmail-message.c: added inline documentation
	* server.c, serverchild.c: removed #ifdef _USE_STR_SIGNAL and use
	strsignal by default.

2005-03-07  Paul Stevens <paul@nfg.nl>

	* clientinfo.h: removed file and moved struct to dbmailtypes.h
	* server.c: stylistic cleanup
	* user.c: fix handling of lists of aliases so dbmail-user works
	almost as documented.
	* proctitleutils.c: removed PROC_TITLE deadwood.
	* dbmail-message.c: add X-DBMail-PhysMessage-ID message header during
	insertion.
	* sql/mysql/add_headers_tables.mysql: fix for foreign keys.

2005-03-01  Paul Stevens <paul@nfg.nl>

	* Makefile.am, acinclude.m4: changed the autotools setup to build
	libdbmail as a convenience lib only, and renamed the backend modules
	to libsqldbmail for every backend. All libs execpt libsqldbmail are
	now noinst_ type static convenience libs.

2005-02-23  Paul Stevens <paul@nfg.nl>

	* check_dbmail.h: use separate config in /etc/dbmail/dbmail-test.conf
	for test-cases.
	* imaputil.c (perform_imap_search): return if setlen is zero.
	* imapcommands.c (_ic_login): return if authentication fails.
	* dbmail_imapsession.c (dbmail_imap_session_mailbox_open): send tagged
	NO response to client if mailbox doesn't exists.
	* db.c, misc.c: string cleanups in mailbox_add_namespace.
	* sql/sqlite/create_tables.sqlite: fixed dbmail_acl_constraint_update
	trigger.
	* debian/rules, debian/control: added support for sqlite based debian
	packages.

2005-02-18  Paul Stevens <paul@nfg.nl>

	* pop3d.c, imapd.c, lmtpd.c, server.c, serverchild.c: added
	non-forking support for inetd users, aka cli-server.
	* dbmail.h, auth/authldap.c: moved GETCONFIGVALUE macro to dbmail.h

2005-02-18  Paul Stevens <paul@nfg.nl>

	* sqlite/dbsqlite.c: added initial sqlite support provided by Geo